[gd_scene load_steps=6 format=3 uid="uid://eb8bsfpekeeu"]

[ext_resource type="Script" uid="uid://br1qdnow3cmfj" path="res://GameManager.gd" id="1"]
[ext_resource type="Script" uid="uid://gad355jhly4x" path="res://Player.gd" id="2"]
[ext_resource type="Script" uid="uid://do0l8f2pmqa52" path="res://Background.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cs2c8tffpw707" path="res://wizard_variation_01_00001_.png" id="4_fos0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(48, 48)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("3")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(512, 450)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4_fos0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -60.0
text = "Score: 0"

[node name="StreakLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -40.0
text = "Streak: 0"

[node name="CoinsLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -20.0
text = "Coins: 0"

[node name="XPLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -20.0
offset_right = 200.0
text = "XP: 0"

[node name="InstructionsLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
text = "A/D or ←→: Switch lanes
W or ↑: Hop (avoid ground hazards)
S or ↓: Slide (avoid overhead hazards)

Perfect dodges build streak multiplier!"
horizontal_alignment = 2

[node name="GameOverLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
text = "Press A or D to restart"
horizontal_alignment = 1
